--- a/aaa.css
+++ b/aaa.css
@@ -1,14 +1,18 @@
 body{
-    background-color: rgb(49, 18, 71);
+    background-color: rgb(5, 42, 51);
 }
 * {
     font-style: inherit
 }
 h1{
-    color:aqua;
+    color:rgb(196, 169, 18);
     font-style: italic;
-    background: green;
+    background: rgb(2, 34, 2);
     text-align: center; 
+}
+p{
+    color:rgb(196, 169, 18);
+    font-style:italic;
 }
 input{
     border:0px;
@@ -17,5 +21,5 @@ input{
 button{
     border:0px;
     border-radius: 5px;
-    color:red;
+    color:rgb(4, 92, 38);
 }
