--- a/aaa.css
+++ b/aaa.css
@@ -23,3 +23,84 @@ button{
     border-radius: 5px;
     color:rgb(4, 92, 38);
 }
+
+.but{
+    height: 40px;
+    line-height: 40px;
+    width: 30%;
+    background: rgb(1, 23, 29);
+    color:rgb(126, 52, 2);
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: .1s ease all;
+    float: auto;    
+}
+.but:hover{
+    text-shadow: 3px 0px 30px rgb(126, 52, 2, 1);
+}
+
+main{
+    max-width: 800px;
+    width: 90%;
+    margin: auto;
+    padding: 40px;
+}
+
+.formulario{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+}
+.formulario_lab{
+    display: block;
+    font-weight: 700px;
+    padding: 10px;
+    cursor: pointer;
+}
+.formulario_inp{
+    width: 100%;
+    background: #fff;
+    border: 0px solid transparent;
+    border-radius: 5px;
+    height: 40px;
+    line-height: 40px;
+    padding: 0 40px 0   10px;
+    transition: .3s ease all;
+}
+.formulario_inp:focus{
+    border: 3px solid rgb(196, 169, 18);
+    outline: none;  
+}
+.formu_error{
+    font-size: 13px;
+    margin-bottom: 0px;
+    display: none;
+}
+.formu_error-activo{
+    display: block;
+}
+.formulario_checkbox{
+    margin: 10px;
+}
+.formulario_g-enviar{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.form_but{
+    height: 40px;
+    line-height: 40px;
+    width: 30%;
+    background: rgb(3, 96, 119);
+    color:rgb(196, 169, 18);
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: .1s ease all;
+}
+.form_but:hover{
+    text-shadow: 3px 0px 30px   rgb(196, 169, 18, 1);
+}
