--- a/aaa.css
+++ b/aaa.css
@@ -18,21 +18,23 @@ label{
     width: 80px;
 }
 
-.contenedorReloj{
-    margin: 100px 300px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 5px;
-    padding: 20px 60px;
-    background-color: rgb(211, 147, 9);
-    color: rgb(80, 0, 0);
-}
-
 #hora{
-    font-size: 32px;
+    font-size: 2rem;
 }
 #fecha{
-    font-size: 26px;
+    font-size: 2rem;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+}
+
+.inputs{
+    display: flex;
+    border-radius: 3px;
+    text-align: center;
+    flex-wrap: wrap;
+    
 }
